:fire: [frontend] Initialisation du composant LowerNavBar
Co-Authored-By: cramara <118884264+cramara@users.noreply.github.com>

--- a/frontend/todolist-app/src/styles.css
+++ b/frontend/todolist-app/src/styles.css
@@ -1,4 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body{
   margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: 'Quicksand', sans-serif;
+  background: linear-gradient(180deg, rgba(140, 0, 255, 0.682) 0%, rgba(66, 23, 102, 0.419) 100%), #271C33;
+  height: 100vh;
+  width: 100vw;
+
+}
+app-root{
+  height: 100%;
+  width: 100%;
+
+  margin: 0;
+  padding: 0;
+  border: 0;
+  display: block;
 }
