--- a/frontend/todolist-app/src/app/navbar/lower-navbar/lower-navbar.component.html
+++ b/frontend/todolist-app/src/app/navbar/lower-navbar/lower-navbar.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <img src="assets/icons/clipboard.png" alt="">
-  <img src="assets/icons/home.png" alt="">
-  <img src="assets/icons/user.png" alt="">
+  <img (click)="goto('add')" src="assets/icons/clipboard.png" alt="Ajouter une liste">
+  <img (click)="goto('get')" src="assets/icons/home.png" alt="Consulter mes listes">
+  <img (click)="goto('account')" src="assets/icons/user.png" alt="Consulter mon profil">
 </div>
