--- a/frontend/todolist-app/src/app/login/login.component.css
+++ b/frontend/todolist-app/src/app/login/login.component.css
@@ -4,12 +4,35 @@
   justify-content: center;
   align-items: center;
 }
-.example-form {
+.connection-form {
   min-width: 150px;
-  max-width: 500px;
   width: 100%;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.upper{
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.example-full-width {
-  width: 100%;
+.title{
+  font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  font-weight: bold;
+  font-size: 3.5em;
 }
+img{
+  height: 35vh;
+}
+
+.create-account{
+  font-size: 1.3em;
+  text-align: center;
+}
+
