--- a/frontend/todolist-app/src/app/app.component.html
+++ b/frontend/todolist-app/src/app/app.component.html
@@ -1,2 +1,4 @@
 <router-outlet></router-outlet>
-<app-lower-navbar></app-lower-navbar>
+<app-lower-navbar
+*ngIf="!this.authRoutes.includes(this.currentRoute)"
+></app-lower-navbar>
