--- a/frontend/todolist-app/src/app/component/login/login.component.html
+++ b/frontend/todolist-app/src/app/component/login/login.component.html
@@ -9,22 +9,22 @@
     <img src="assets/LogoSansBg.png" alt="logo de tod'app">
     <h1 class="title">App</h1>
   </div>
-  <form class="connection-form">
+  <form [formGroup]="formGroup" class="connection-form">
 
     <div class="default_form-field">
 
       <label class="default_label" for="Nickname">Pseudonyme</label>
-      <input class="default_input" type="text" id="Nickname" formControlName="Nickname">
+      <input class="default_input" type="text" id="Nickname" formControlName="username" >
 
     </div>
     <div class="default_form-field">
 
       <label class="default_label" for="Password">Mot de passe</label>
-      <input class="default_input" type="password" id="Password" formControlName="Password">
+      <input class="default_input" type="password" id="Password" formControlName="password">
 
     </div>
 
-    <button class="default_button">Se connecter</button>
+    <button class="default_button" (click)="connect()">Se connecter</button>
 
 
   </form>
