fin du style signIn

--- a/frontend/todolist-app/src/app/component/sign-in/sign-in.component.html
+++ b/frontend/todolist-app/src/app/component/sign-in/sign-in.component.html
@@ -22,10 +22,40 @@
 
     <div class="default_form-field">
 
-      <label class="default_label" for="Nickname">Pseudonyme</label>
+      <label class="default_label" for="LastName">Nom</label>
+      <input class="default_input" type="text" id="LastName" formControlName="LastName">
+
+    </div>
+
+    <div class="default_form-field">
+
+      <label class="default_label" for="FirstName">Prénom</label>
+      <input class="default_input" type="text" id="FirstName" formControlName="FirstName">
+
+    </div>
+
+    <div class="default_form-field">
+
+      <label class="default_label" for="Phone">Téléphone</label>
+      <input class="default_input" type="text" id="Phone" formControlName="Phone">
+
+    </div>
+
+    <div class="default_form-field">
+
+      <label class="default_label" for="Email">Email</label>
+      <input class="default_input" type="text" id="Email" formControlName="Email">
+
+    </div>
+
+    <div class="default_form-field">
+
+      <label class="default_label" for="Nickname">Pseudo</label>
       <input class="default_input" type="text" id="Nickname" formControlName="Nickname">
 
     </div>
+
+
     <div class="default_form-field">
 
       <label class="default_label" for="Password">Mot de passe</label>
@@ -33,10 +63,16 @@
 
     </div>
 
-    <button class="default_button">Créer un compte</button>
+    <button class="default_button">S'inscrire</button>
 
 
   </form>
+
+  <div class = "connect">
+    Me connecter
+  </div>
+
+
 
 
 </div>
