--- a/frontend/todolist-app/src/app/component/sign-in/sign-in.component.css
+++ b/frontend/todolist-app/src/app/component/sign-in/sign-in.component.css
@@ -7,12 +7,13 @@
 .connection-form {
   min-width: 150px;
   width: 100%;
-  height: 40vh;
+  height: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
-  margin-top: 5vh;
+  justify-content: space-around;
+  margin-top: 6vh;
+  flex-wrap: wrap;
 }
 .upper{
   display: flex;
@@ -31,6 +32,23 @@
 
 
 }
+.mainContent{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 2vh;
+
+}
+
+.connect{
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1.5em;
+  margin-top: 5vh;
+
+
+}
 
 .title{
   font-family: 'Quicksand', sans-serif;
@@ -39,7 +57,8 @@
   font-size: 2em;
 }
 img{
-  height: 15vh;
+  height: 17vh;
+
 }
 
 h3{
@@ -49,10 +68,11 @@ h3{
   display: inline;
   align-items: center;
   text-align: center;
-  width: 80%;
-  margin : 0;
+  width: 70%;
+  margin-top: 2vh;
 
 }
+
 
 
 
@@ -60,4 +80,40 @@ h3{
   font-size: 1.3em;
   text-align: center;
 }
+
+.default_input{
+  width: 100%;
+  height: 5vh;
+  border-radius: 5px;
+  border: 1px solid #7B48E6;
+  padding: 5px;
+  margin-top: 0.3vh;
+  font-size: 1.2em;
+  font-family: 'Quicksand', sans-serif;
+  background-color: #7B48E6;
+  opacity: 0.2;
+}
+
+.default_label{
+  font-size: 1.5em;
+  height: 30%;
+  font-weight: lighter;
+  color: #fff;
+
+}
+
+.default_form-field{
+ display: flex;
+ flex-direction: column;
+ width: 40%;
+ height: 10vh;
+ align-items: start;
+
+}
+
+.default_button{
+  margin-top: 8vh;
+
+}
+
 
