--- a/frontend/todolist-app/src/app/component/sign-in/sign-in.component.css
+++ b/frontend/todolist-app/src/app/component/sign-in/sign-in.component.css
@@ -12,7 +12,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  margin-top: 6vh;
   flex-wrap: wrap;
 }
 .upper{
@@ -38,7 +37,6 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  margin-top: 2vh;
 
 }
 
@@ -107,7 +105,7 @@ h3{
  flex-direction: column;
  width: 40%;
  height: 10vh;
- align-items: start;
+ align-items: flex-start;
 
 }
 
