--- a/frontend/todolist-app/src/app/component/sign-in/sign-in.component.html
+++ b/frontend/todolist-app/src/app/component/sign-in/sign-in.component.html
@@ -19,6 +19,7 @@
 
   </div>
   <form class="connection-form">
+    <div class="inputs">
 
     <div class="default_form-field">
 
@@ -61,6 +62,7 @@
       <label class="default_label" for="Password">Mot de passe</label>
       <input class="default_input" type="password" id="Password" formControlName="Password">
 
+    </div>
     </div>
 
     <button class="default_button">S'inscrire</button>
