--- a/frontend/todolist-app/src/app/component/sign-in/sign-in.component.css
+++ b/frontend/todolist-app/src/app/component/sign-in/sign-in.component.css
@@ -9,25 +9,26 @@
   width: 100%;
   height: auto;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  flex-wrap: wrap;
+
+  height: 50%;
 }
 .upper{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+  height: 35%;
 }
 
 .logo{
   display: flex;
   align-items: center;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 80%;
-  margin-top: 2vh;
 
 
 }
@@ -35,19 +36,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   width: 100%;
-
+  height: 100vh;
 }
 
 .connect{
   font-family: 'Quicksand', sans-serif;
   font-size: 1.5em;
-  margin-top: 5vh;
-
-
+  height: 10%;
 }
 
+.inputs{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+}
 .title{
   font-family: 'Quicksand', sans-serif;
   margin: 0;
@@ -64,11 +69,9 @@ h3{
   font-weight: lighter;
   font-size: 1.5em;
   display: inline;
-  align-items: center;
   text-align: center;
   width: 70%;
-  margin-top: 2vh;
-
+  margin: 0;
 }
 
 
@@ -84,8 +87,6 @@ h3{
   height: 5vh;
   border-radius: 5px;
   border: 1px solid #7B48E6;
-  padding: 5px;
-  margin-top: 0.3vh;
   font-size: 1.2em;
   font-family: 'Quicksand', sans-serif;
   background-color: #7B48E6;
@@ -108,10 +109,4 @@ h3{
  align-items: flex-start;
 
 }
-
-.default_button{
-  margin-top: 8vh;
-
-}
-
 
