--- a/frontend/todolist-app/src/app/component/sign-in/sign-in.component.css
+++ b/frontend/todolist-app/src/app/component/sign-in/sign-in.component.css
@@ -82,15 +82,14 @@ h3{
   text-align: center;
 }
 
+
 .default_input{
   width: 100%;
   height: 5vh;
   border-radius: 5px;
-  border: 1px solid #7B48E6;
   font-size: 1.2em;
   font-family: 'Quicksand', sans-serif;
-  background-color: #7B48E6;
-  opacity: 0.2;
+  color: #fff;
 }
 
 .default_label{
@@ -101,12 +100,11 @@ h3{
 
 }
 
-.default_form-field{
+.default_form-field,app-user-input{
  display: flex;
  flex-direction: column;
  width: 40%;
- height: 10vh;
+ height: 13vh;
  align-items: flex-start;
 
 }
-
