:crocodile: [frontend] Maj du css de sign-in

--- a/frontend/todolist-app/src/app/component/sign-in/sign-in.component.css
+++ b/frontend/todolist-app/src/app/component/sign-in/sign-in.component.css
@@ -44,7 +44,10 @@
 .connect{
   font-family: 'Quicksand', sans-serif;
   font-size: 1.5em;
-  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 15%;
 }
 
 .inputs{
