Implémentation du components pop-up

--- a/frontend/todolist-app/src/app/component/sign-in/sign-in.component.html
+++ b/frontend/todolist-app/src/app/component/sign-in/sign-in.component.html
@@ -44,14 +44,7 @@
 
 
 </div>
-<div class="default_parent-pop-up">
-  <div class="default_pop-up" *ngIf="true">
-    <div class="pop-up-title">
-      Un email vous a été envoyé pour confirmer votre inscription.
 
-    </div>
-    <app-user-input type="password" label="Mot de passe" name="password" [controle]="getFormControl('password')" [errorMessage]="'Le Mot de passe est requis.'"></app-user-input>
+<app-pop-up title="Validation" message = "Vérifiez votre email" [quit] = "true" *ngIf="valid" (closeEmitter)="this.toCloseFromChild($event)">
 
-  </div>
-
-</div>
+</app-pop-up>
