input handle images

--- a/frontend/todolist-app/src/app/component/user-input/user-input.component.css
+++ b/frontend/todolist-app/src/app/component/user-input/user-input.component.css
@@ -22,3 +22,15 @@
  align-items: flex-start;
 
 }
+::placeholder{
+  color: #ffffffc0;
+}
+img{
+  width: 30px;
+  height: 30px;
+  position: relative;
+}
+.input-image{
+  width: 100%;
+  display: flex;
+}
