--- a/frontend/todolist-app/src/app/app.component.html
+++ b/frontend/todolist-app/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-upper-navbar></app-upper-navbar>
 <router-outlet></router-outlet>
 <app-lower-navbar
 *ngIf="!this.authRoutes.includes(this.currentRoute)"
