--- a/frontend/todolist-app/src/app/component/navbar/upper-navbar/upper-navbar.component.html
+++ b/frontend/todolist-app/src/app/component/navbar/upper-navbar/upper-navbar.component.html
@@ -1,1 +1,4 @@
-<p>upper-navbar works!</p>
+<div class="nav-one">
+  <app-user-input placeholder="Rechercher une liste" id="searchbar" rightImage="assets/icons/fermer.png"></app-user-input>
+</div>
+<div class="nav-two"></div>
