--- a/frontend/todolist-app/src/app/component/navbar/upper-navbar/upper-navbar.component.css
+++ b/frontend/todolist-app/src/app/component/navbar/upper-navbar/upper-navbar.component.css
@@ -9,3 +9,21 @@
 app-user-input{
   width: 60%;
 }
+.nav-two{
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
+}
+h1{
+  margin: 0;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+}
+img{
+  border-radius: 50%;
+  width: 40px;
+
+}
