--- a/frontend/todolist-app/src/app/component/pop-up/pop-up.component.css
+++ b/frontend/todolist-app/src/app/component/pop-up/pop-up.component.css
@@ -36,10 +36,11 @@
 }
 
 .input{
-  width: 100%;
+  height: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
+
 
 }
 
@@ -50,3 +51,5 @@
   align-items: center;
   font-size: 1.2rem;
 }
+
+
