:beers: feat : Greeting component implementation

--- a/frontend/todolist-app/src/app/component/pages/login/login.component.css
+++ b/frontend/todolist-app/src/app/component/pages/login/login.component.css
@@ -20,7 +20,11 @@
   align-items: center;
   justify-content: center;
 }
-
+.redirect{
+  font-size: 1.3em;
+  margin: 0;
+  font-weight: 400;
+}
 .title{
   font-family: 'Quicksand', sans-serif;
   margin: 0;
