--- a/frontend/todolist-app/src/app/component/pages/login/login.component.html
+++ b/frontend/todolist-app/src/app/component/pages/login/login.component.html
@@ -24,7 +24,9 @@
   </form>
 
   <div class="create-account">
+    <p class="redirect"  (click)="goto('/sign-in')">
     Créer un compte
+    </p>
   </div>
 
 </div>
