--- a/frontend/todolist-app/src/app/component/pages/sign-in/sign-in.component.html
+++ b/frontend/todolist-app/src/app/component/pages/sign-in/sign-in.component.html
@@ -37,7 +37,9 @@
   </form>
 
   <div  class = "connect">
-    Me connecter
+    <p class="redirect" (click)="goto('/login')">
+      Me connecter
+    </p>
   </div>
 
 
